--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>sign up form</title>
   </head>
   <body>
+      <h1>Sign Up here</h1>
     <form
       action="https://formsubmit.co/roman_garza@protonmail.com"
       method="POST"
     >
       <input type="hidden" name="_subject" value="Email from website" />
+      <input type="hidden" name="_next" value="https://romangarza.github.io/thankyou.html">
       <input type="text" name="name" required />
       <input type="email" name="email" required />
       <button type="submit">Send</button>
