--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <title>sign up form</title>
   </head>
   <body>
-      <h1>Sign Up here</h1>
+    <h1>Sign Up here</h1>
     <form
-      action="https://formsubmit.co/roman_garza@protonmail.com"
+      action="https://formsubmit.co/Roman_Garza@protonmail.com"
       method="POST"
     >
       <input type="hidden" name="_subject" value="Email from website" />
-      <input type="hidden" name="_next" value="https://romangarza.github.io/thankyou.html">
-      <input type="text" name="name" required />
-      <input type="email" name="email" required />
-      <button type="submit">Send</button>
+      <input
+        type="hidden"
+        name="_next"
+        value="https://romangarza.github.io/thankyou.html" />
+      <input type="text" placeholder="name" required />
+      <input type="email" placeholder="email" required /><br />
+      <textarea placeholder="your message" required rows="5"></textarea><br />
+      <button class="btn_one">send</button>
     </form>
   </body>
 </html>
