--- a/.vscode/pages/signup.html
+++ b/.vscode/pages/signup.html
@@ -17,7 +17,7 @@
       <input
         type="hidden"
         name="_next"
-        value="https://romangarza.github.io/index.html" />
+        value="https://romangarza.github.io/pages/index.html" />
       <input type="text" placeholder="name" required />
       <input type="email" placeholder="email" required /><br />
       <textarea placeholder="your message" required rows="5"></textarea><br />
